# RNNativeModules

./: App.tsx  README.md  package-lock.json
android/app/: CMakeLists.txt  build.gradle
android/app/src/dev/cpp/: ze-base-url-native-lib.cpp  ze-environment-native-lib.cpp  ze-firebase-native-lib.cpp
android/app/src/main/java/com/awesomeproject/: FirstModule.kt  MainActivity.kt  MainApplication.kt  MyAppPackage.kt  MyTalentsModule.kt  ZEAppEnvironment.kt
android/zemytalents/: CMakeLists.txt  build.gradle
android/zemytalents/schemas/com.upax.zemytalents.data.local.database.ZEMTTalentsDatabase/: 1.json  2.json  3.json  4.json
android/zemytalents/src/androidTest/assets/: summary-talents-success.json  survey-apply-success.json  survey-discover-success.json
android/zemytalents/src/androidTest/java/com/upax/zemytalents/rules/: SurveyApplyDatabaseRule.kt  SurveyDiscoverDatabaseRule.kt
android/zemytalents/src/androidTest/java/com/upax/zemytalents/utils/: DIProviderRule.kt  MockResponseExtensions.kt  MockWebServerRule.kt  OkHttp3IdlingResource.kt
android/zemytalents/src/gms/java/com/upax/zemytalents/data/: ZEMTLocationUpdaterImpl.kt
android/zemytalents/src/hms/java/com/upax/zemytalents/data/: ZEMTLocationUpdaterImpl.kt
android/zemytalents/src/main/: AndroidManifest.xml
android/zemytalents/src/main/cpp/: zemt-base-url-native-lib.cpp  zemt-firebase-native-lib.cpp
android/zemytalents/src/main/java/com/upax/zemytalents/common/: ZEMTCanvasExtension.kt  ZEMTEnvironment.kt  ZEMTNullSafetyExtensions.kt  ZEMTQrFunctions.kt  ZEMTStringExtensions.kt
android/zemytalents/src/main/java/com/upax/zemytalents/data/mock/: ZEMTMockConversationList.kt  ZEMTMockPhraseList.kt  ZEMTMockYesNoList.kt
android/zemytalents/src/main/java/com/upax/zemytalents/data/repository/: ZEMTAndroidDeviceRepository.kt  ZEMTAnswersApplyInterceptorSurveyTalentsRepository.kt  ZEMTConversationsRepository.kt  ZEMTConversationsRepositoryImpl.kt  ZEMTInMemoryTalentsRepository.kt  ZEMTKeyManagerPreferencesLocationRepository.kt  ZEMTLocalDateTimeDateRepositoryImpl.kt  ZEMTLocalSurveyApplyAnswersRepository.kt  ZEMTModulesRepositoryImpl.kt  ZEMTPreferencesCaptionsRepository.kt  ZEMTRetrofitAnswersSynchronizer.kt  ZEMTRetrofitCaptionsDownloader.kt  ZEMTRetrofitSurveyTalentsRepository.kt  ZEMTRoomAnswerOptionDiscoverRepository.kt  ZEMTRoomAnswerSavedDiscoverRepository.kt  ZEMTRoomCollaboratorsRepository.kt  ZEMTRoomGroupQuestionsDiscoverRepository.kt  ZEMTRoomSurveyApplyRepository.kt  ZEMTRoomSurveyConfirmRepository.kt  ZEMTRoomSurveyDiscoverBreaksRepository.kt  ZEMTRoomSurveyDiscoverRepository.kt  ZEMTRoomSurveyRegistrar.kt  ZEMTRoomTalentsCompletedRepository.kt  ZEMTSurveyDiscoverDownloaderImpl.kt  ZEMTTalentsRepositoryImpl.kt  ZEMTUserRepositoryImpl.kt  ZEMTWorkManagerSurveyDiscoverReminder.kt
android/zemytalents/src/main/java/com/upax/zemytalents/data/worker/: ZEMTSurveyDiscoverNotificationWorker.kt
android/zemytalents/src/main/java/com/upax/zemytalents/di/: ZEMTApiServiceProvider.kt  ZEMTDataProvider.kt  ZEMTRepositoryProvider.kt  ZEMTUseCaseProvider.kt  ZEMTViewModelFactory.kt  ZEMTViewModelProvider.kt
android/zemytalents/src/main/java/com/upax/zemytalents/domain/models/: ZEMTCaption.kt  ZEMTCaptionCatalog.kt  ZEMTCollaboratorTalentStatus.kt  ZEMTDropdownDirection.kt  ZEMTDropdownGroupStyle.kt  ZEMTLocation.kt  ZEMTProfileTalentState.kt  ZEMTResult.kt  ZEMTTalent.kt  ZEMTTalentAnimationData.kt  ZEMTTalentAttachment.kt  (+2 more)
android/zemytalents/src/main/java/com/upax/zemytalents/expose/: ZEMTMyTalentsExpose.kt
android/zemytalents/src/main/java/com/upax/zemytalents/ui/: ZEMTHostActivity.kt  ZEMTHostActivityViewModel.kt
android/zemytalents/src/main/res/drawable/: zemt_ic_adaptive_audio_mic.xml  zemt_ic_conversation_check_up.xml  zemt_ic_conversation_connection.xml  zemt_ic_conversation_development.xml  zemt_ic_conversation_goals.xml  zemt_ic_conversation_performance.xml  zemt_ic_dialog_drag.xml  zemt_ic_done.xml  zemt_ic_keyboard_arrow_right.xml  zemt_ic_kid_star_filled.xml  zemt_ic_padlock_closed_filled.xml  zemt_ic_padlock_closed_outlined.xml  zemt_ic_padlock_open_filled.xml  zemt_ic_padlock_open_filled_white.xml  zemt_ic_person_play.xml  zemt_ic_record_voice_over.xml  zemt_ic_school.xml  zemt_ic_send_to_mobile.xml  zemt_ic_sentiment_excited.xml  zemt_ic_sentiment_excited_selected.xml  zemt_ic_sentiment_neutral.xml  zemt_ic_sentiment_neutral_selected.xml  zemt_ic_sentiment_satisfied.xml  zemt_ic_sentiment_satisfied_selected.xml  zemt_ic_star.xml  zemt_ic_talent_activador.xml  zemt_ic_talent_actualizador.xml  zemt_ic_talent_articulador.xml  zemt_ic_talent_autoseguridad.xml  zemt_ic_talent_calidad.xml  zemt_ic_talent_competidor.xml  zemt_ic_talent_comprension.xml  zemt_ic_talent_comunicador.xml  zemt_ic_talent_concentracion.xml  zemt_ic_talent_conceptual.xml  zemt_ic_talent_conciliador.xml  zemt_ic_talent_conductor.xml  zemt_ic_talent_confidente.xml  zemt_ic_talent_conquistador.xml  zemt_ic_talent_conviccion.xml  (+23 more)
android/zemytalents/src/main/res/layout/: zemt_activity_host.xml
android/zemytalents/src/main/res/navigation/: zemt_main_graph.xml
android/zemytalents/src/main/res/raw/: zemt_animation_discover_tutorial.json  zemt_animation_trophy.json  zemt_balance.json  zemt_colaboradores.json  zemt_colibri.json  zemt_confetti.json  zemt_cup.json  zemt_degree.json  zemt_globe_chat.json  zemt_home_tutorial.json  zemt_introduction.json  zemt_negative_apply.json  zemt_positive_apply.json  zemt_qr_code_scanning.json  zemt_star.json  zemt_telescope.json  zemt_welcome.json
android/zemytalents/src/main/res/values/: strings.xml
android/zemytalents/src/test/java/com/upax/zemytalents/rules/: ZEMTConversationsDatabaseTestRule.kt  ZEMTCoroutinesTestRule.kt  ZEMTMyTalentsDatabaseTestRule.kt
android/zemytalents/src/test/java/com/upax/zemytalents/utils/: ZEMTRandomValuesUtil.kt  ZHCFlowUtils.kt
(+459 files in other folders)
